--- a/package.json
+++ b/package.json
@@ -1,15 +1,24 @@
 {
-  "name": "frontend-test",
-  "version": "0.1.0",
+  "name": "@guidecx/frontend-test",
+  "description": "Take-home exercise for working with React and GraphQL",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "@types/jest": "^26.0.20",
+    "@types/node": "^14.14.22",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "node-sass": "^4.0.0",
+    "typescript": "^4.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
