--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "graphql": "^15.5.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
@@ -21,6 +22,7 @@
     "@types/node": "^14.14.22",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-router-dom": "^5.1.7",
     "autoprefixer": "^9.8.6",
     "node-sass": "^4.0.0",
     "postcss": "^7.0.35",
