--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@guidecx/frontend-test",
-  "description": "Take-home exercise for working with React and GraphQL",
+  "description": "Take-home exercise for working with React",
   "version": "1.0.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@apollo/client": "^3.3.7",
     "graphql": "^15.5.0",
